stealth (2.02.01)

  * Removed FnWrap* calls from Stealth's sources
  
  * `build' script now recognizes CXXFLAGS and LDFLAGS for, resp. g++ and ld
    flags. Default values are set in INSTALL.im, as before.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sun, 26 Jun 2011 14:24:10 +0200

stealth (2.02.00)

  * The file specifying the names of files whose integrity should not be
    checked may contain empty lines and lines whose 1st non-blank characters
    start with #. Such lines are ignored.

  * The 'build' script now uses the -g option by default (set in
    INSTALL.im). To modify the g++ compilation options change the #define
    CPPOPT in INSTALL.im. By default it is set to "-O2 -g". To modify the
    flags `on the fly' set the environment variable CPPFLAGS, overruling
    CPPOPT.  The option "-Wall" is always used and should not be altered.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Tue, 07 Jun 2011 13:06:18 +0200

stealth (2.01.00)

  * Stealthcleanup now has a -v flag, showing its actions

  * Following an upgrade to bobcat 2.11.00 stealth should be recompiled

  * Identifiers in #defines in configuration files may now also contain 
    hyphens and underscores.

  * The message about 'can't read Mstream...' when stealth started with
    --keep-alive is now prevented

  * Stealth's timestamp now is according to the rfc 2822 format, using UTC

  * Inclusion and exclusion diff-output are again part of the report. Due to
    an omitted else in scanner/nodifferences only the > (old) parts were
    shown. 

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sat, 05 Feb 2011 12:38:23 +0100

stealth (2.00.1)

  * Documentation requires >= Yodl 3.00.0

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Wed, 10 Nov 2010 10:38:49 +0100

stealth (2.00.0)

  * Changed Errno::what() call to Errno::why()
  * Repaired handling of the -o flag (wasn't working: checked for option "o"
    rather than 'o'.
  * Implemented option -s (--skip-files) to skip the integrity-test of