@@ -1,2 +1,2 @@
-#define VERSION "2.02.01"
-#define YEARS   "2005-2011"
+#define VERSION "2.02.02"
+#define YEARS   "2005-2012"
